# agent-learning-project

agent-learning-project/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  start-learning.bat
agent-learning-project/backend/: __init__.py
agent-learning-project/backend/agents/: __init__.py  base.py  multi_agent.py  react_agent.py
agent-learning-project/backend/api/: __init__.py  main.py  schemas.py
agent-learning-project/backend/llm/: __init__.py  anthropic_client.py  base.py  deepseek_client.py  factory.py  glm_client.py  models.py  ollama_client.py  openai_client.py
agent-learning-project/backend/memory/: __init__.py  long_term.py  short_term.py
agent-learning-project/backend/rag/: __init__.py  embeddings.py  pipeline.py  retriever.py  vectorstore.py
agent-learning-project/backend/tools/: __init__.py  base.py  calculator.py  file_ops.py  registry.py  search.py
agent-learning-project/config/: settings.py
agent-learning-project/docs/: design.md  spec.md  task.md  uv-guide.md
agent-learning-project/docs/architecture/: class-diagram.md
agent-learning-project/docs/lessons/: L00-Design-Patterns.ipynb  L01-LLM-Basics.ipynb  L02-Agent-Core-Concepts.ipynb  L03-Prompt-Engineering.ipynb  L04-Data-Models.ipynb  L05-Async-Programming.ipynb  L06-LLM-API-Calling.ipynb  L07-Multi-Model-Abstraction.ipynb  L08-Error-Handling-Retry.ipynb  L09-Function-Calling.ipynb  L10-Tool-Definition-Registration.ipynb  L11-Tool-Parameter-Parsing.ipynb  L12-Custom-Tool-Development.ipynb  L13-Short-Term-Memory.ipynb  L14-Vector-Database-Basics.ipynb  L15-Long-Term-Memory.ipynb  L16-ReAct-Pattern.ipynb  L17-Conversational-Agent.ipynb  L18-Multi-Agent-Collaboration.ipynb  L19-Document-Splitting-Embeddings.ipynb  L20-Vector-Retrieval.ipynb  L21-RAG-Complete-Workflow.ipynb  L22-API-Service-Development.ipynb  L23-Frontend-Development.ipynb  (+3 more)
agent-learning-project/frontend/: app.py
agent-learning-project/tests/: check_imports.py  test_core_behavior.py  test_llm.py  test_tools.py
(+2 files in other folders)
