[project]
name = "agent-learning-project"
version = "0.1.0"
description = "A comprehensive Agent development learning project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "zhipuai>=2.1.5.20250825",
]

[project.optional-dependencies]
# Core Framework
core = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
]

# LLM Providers
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "zhipuai>=2.0.0",
]

# Vector Store & Embeddings
vectorstore = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
]

# API Framework
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

# Frontend
frontend = [
    "streamlit>=1.31.0",
    "jupyter>=1.0.0",
]

# Utilities
utils = [
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.0.0",
]

# Document Processing
documents = [
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
]

# Tools
tools = [
    "duckduckgo-search>=4.0.0",
    "wikipedia>=1.4.0",
]

# Development
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

# All dependencies
all = [
    "agent-learning-project[core,llm,vectorstore,api,frontend,utils,documents,tools]",
]

[tool.uv]
dev-dependencies = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

# 配置国内镜像源
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = []

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "config"]
